--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.27.13",
     "serve": "^11.3.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.1.2"
   },
   "scripts": {
