--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.9.2",
+    "query-string": "^6.13.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-slick": "^0.27.13",
     "serve": "^11.3.1",
     "slick-carousel": "^1.8.1",
+    "spotify-web-api-js": "^1.5.1",
     "typescript": "^4.1.2"
   },
   "scripts": {
