--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"antd": "^4.9.2",
+		"gulp": "^4.0.2",
+		"gulp-sass": "^5.1.0",
 		"query-string": "^6.13.7",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
