--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"query-string": "^7.1.1",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"react-router": "^6.3.0",
+		"react-router-dom": "^6.3.0",
 		"react-scripts": "^5.0.0",
 		"react-slick": "^0.28.1",
 		"serve": "^13.0.2",
