--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^14.0.4",
 		"antd": "^4.19.5",
+		"classnames": "^2.3.1",
 		"gulp": "^3.9.1",
 		"gulp-sass": "^5.1.0",
 		"query-string": "^7.1.1",
