--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"serve": "^13.0.2",
 		"slick-carousel": "^1.8.1",
 		"spotify-web-api-js": "^1.5.2",
+		"string-similarity": "^4.0.4",
 		"typescript": "^4.6.3"
 	},
 	"scripts": {
