--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"gulp-sass": "^5.1.0",
 		"query-string": "^7.1.1",
 		"react": "^18.0.0",
+		"react-device-detect": "^2.2.2",
 		"react-dom": "^18.0.0",
 		"react-router": "^6.3.0",
 		"react-router-dom": "^6.3.0",
